--- a/src/NBT.WebUI/Components/App.razor
+++ b/src/NBT.WebUI/Components/App.razor
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="app.css" />
     <link rel="stylesheet" href="NBT.WebUI.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <HeadOutlet @rendermode="@InteractiveServer" />
+    <HeadOutlet />
 </head>
 <body>
-    <Routes @rendermode="@InteractiveServer" />
+    <Routes />
     <script src="_framework/blazor.web.js"></script>
 </body>
 </html>
