--- a/src/NBT.WebUI/Components/Pages/Contact.razor
+++ b/src/NBT.WebUI/Components/Pages/Contact.razor
@@ -1,5 +1,5 @@
 @page "/contact"
-@rendermode @(new Microsoft.AspNetCore.Components.Web.InteractiveServerRenderMode(prerender: false))
+@rendermode InteractiveServer
 @using NBT.WebUI.Services
 @using NBT.WebUI.Models
 @inject IContactInquiryService ContactInquiryService
