--- a/src/NBT.WebUI/Components/Pages/Login.razor
+++ b/src/NBT.WebUI/Components/Pages/Login.razor
@@ -1,4 +1,5 @@
 @page "/login"
+@rendermode InteractiveServer
 @using NBT.WebUI.Services
 @using System.ComponentModel.DataAnnotations
 @inject IAuthenticationService AuthService
@@ -20,7 +21,7 @@
             </FluentMessageBar>
         }
 
-        <EditForm Model="@_loginModel" OnValidSubmit="@HandleLoginAsync">
+        <EditForm Model="@_loginModel" OnValidSubmit="@HandleLoginAsync" FormName="LoginForm">
             <DataAnnotationsValidator />
             
             <div class="form-group">
@@ -69,7 +70,9 @@
 </div>
 
 @code {
-    private LoginModel _loginModel = new();
+    [SupplyParameterFromForm]
+    private LoginModel _loginModel { get; set; } = new();
+    
     private bool _isLoading = false;
     private string? _errorMessage;
 
