--- a/src/NBT.WebUI/Components/Pages/News.razor
+++ b/src/NBT.WebUI/Components/Pages/News.razor
@@ -1,4 +1,5 @@
 @page "/news"
+@rendermode InteractiveServer
 @using NBT.WebUI.Services
 @using NBT.WebUI.Models
 @inject IAnnouncementService AnnouncementService
