--- a/src/NBT.WebUI/Components/Pages/Resources.razor
+++ b/src/NBT.WebUI/Components/Pages/Resources.razor
@@ -1,4 +1,5 @@
 @page "/resources"
+@rendermode InteractiveServer
 @using NBT.WebUI.Services
 @using NBT.WebUI.Models
 @inject IResourceService ResourceService
