--- a/src/NBT.WebUI/Components/Routes.razor
+++ b/src/NBT.WebUI/Components/Routes.razor
@@ -1,16 +1,38 @@
-﻿<Router AppAssembly="typeof(Program).Assembly">
-    <Found Context="routeData">
-        <RouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)" />
-        <FocusOnNavigate RouteData="routeData" Selector="h1" />
-    </Found>
-    <NotFound>
-        <PageTitle>Not Found</PageTitle>
-        <LayoutView Layout="typeof(Layout.MainLayout)">
-            <div class="content">
-                <h1>404 - Page Not Found</h1>
-                <p>Sorry, the page you are looking for could not be found.</p>
-                <a href="/">Return to Home</a>
-            </div>
-        </LayoutView>
-    </NotFound>
-</Router>
+﻿@using Microsoft.AspNetCore.Components.Authorization
+
+<CascadingAuthenticationState>
+    <Router AppAssembly="typeof(Program).Assembly">
+        <Found Context="routeData">
+            <AuthorizeRouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)">
+                <NotAuthorized>
+                    @if (context.User.Identity?.IsAuthenticated != true)
+                    {
+                        <RedirectToLogin />
+                    }
+                    else
+                    {
+                        <PageTitle>Access Denied</PageTitle>
+                        <LayoutView Layout="typeof(Layout.MainLayout)">
+                            <div class="content">
+                                <h1>Access Denied</h1>
+                                <p>You do not have permission to access this page.</p>
+                                <a href="/">Return to Home</a>
+                            </div>
+                        </LayoutView>
+                    }
+                </NotAuthorized>
+            </AuthorizeRouteView>
+            <FocusOnNavigate RouteData="routeData" Selector="h1" />
+        </Found>
+        <NotFound>
+            <PageTitle>Not Found</PageTitle>
+            <LayoutView Layout="typeof(Layout.MainLayout)">
+                <div class="content">
+                    <h1>404 - Page Not Found</h1>
+                    <p>Sorry, the page you are looking for could not be found.</p>
+                    <a href="/">Return to Home</a>
+                </div>
+            </LayoutView>
+        </NotFound>
+    </Router>
+</CascadingAuthenticationState>
