--- a/src/NBT.WebUI.Client/_Imports.razor
+++ b/src/NBT.WebUI.Client/_Imports.razor
@@ -6,5 +6,8 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+@using Microsoft.FluentUI.AspNetCore.Components
 @using NBT.WebUI.Client
 @using NBT.WebUI.Client.Layout
+@using NBT.WebUI.Client.Models
+@using NBT.WebUI.Client.Services
