Complete MudBlazor to FluentUI migration and add GitHub workflow automation

--- a/src/NBT.WebUI.Client/_Imports.razor
+++ b/src/NBT.WebUI.Client/_Imports.razor
@@ -1,13 +1,16 @@
 ﻿@using System.Net.Http
 @using System.Net.Http.Json
+@using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
+@using Microsoft.AspNetCore.Authorization
 @using Microsoft.JSInterop
 @using Microsoft.FluentUI.AspNetCore.Components
 @using NBT.WebUI.Client
 @using NBT.WebUI.Client.Layout
 @using NBT.WebUI.Client.Models
+@using NBT.WebUI.Client.Models.Reports
 @using NBT.WebUI.Client.Services
